--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  Call : + 01 1234567890
+                  Call : + 91 8910753459
                 </span>
               </a>
               <form class="form-inline">
@@ -100,8 +100,7 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              Bread pizza companies are businesses that specialize in creating and selling bread pizzas to customers. These companies often offer a variety of bread pizza options, including classic toppings like pepperoni and mushrooms, as well as more unique and creative toppings to appeal to a wider audience. Some bread pizza companies operate as quick-service restaurants, offering their pizzas for dine-in or takeout, while others may offer their pizzas through delivery or catering services. These companies often focus on using high-quality ingredients to create delicious and flavorful pizzas that stand out from their competitors. With the popularity of bread pizza on the rise, bread pizza companies are becoming increasingly common, offering a convenient and tasty way to enjoy the flavors of pizza in a quick and easy format.
             </p>
             <a href="">
               Read More
