--- a/index.html
+++ b/index.html
@@ -153,18 +153,18 @@
                 <div class="col-md-6 ">
                   <div class="detail_box">
                     <h1>
-                      The best marketing
+                     The Best Bread PizzA
                     </h1>
                     <p>
-                      It is a long established fact that a reader will be distracted by the readable content of a page
-                      when looking
+                      Bread pizza is a quick and easy way to satisfy your craving for pizza without the time and effort it takes to make traditional pizza dough. It involves using slices of bread as the base instead of pizza dough, which are then topped with pizza sauce, cheese, and your favorite toppings. Bread pizza is a versatile dish that can be customized to suit your taste preferences, whether you prefer classic toppings like pepperoni and mushrooms, or more unconventional ones like pineapple and bacon. It's a great option for a quick snack, a casual meal with friends and family, or even as a party appetizer. With its simplicity and versatility, bread pizza is a delicious and convenient way to enjoy the flavors of pizza anytime, anywhere.
+
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
                         Contact Us
                       </a>
                       <a href="" class="btn-2">
-                        Get A Quote
+                       See Our PizzA
                       </a>
                     </div>
                   </div>
