--- a/service.html
+++ b/service.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Seotech
+              BreadPizzA
             </span>
           </a>
           </a>
@@ -68,8 +68,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  Call : + 01 1234567890
-                </span>
+                  Call : + 91 8910753459                </span>
               </a>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
